[tool.poetry]
name = "edge-python"
version = "0.1.0"
description = "deploy codes to edge devices written in Python"
authors = ["ks6088ts <ks6088ts@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pylint = "^2.7.2"
pytest = "^6.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
